Correct text-align property for help note.

--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ button {
   padding: 10px;
   background-color: aquamarine;
   border-radius: 5px;
+  text-align: center;
   position: sticky;
   bottom: 0;
   left: 25%;
